# Im_HeadU_2_esp32

./: .clangd  .cproject  .project  partitions.csv  sdkconfig  sdkconfig.old
main/: Block_FRAM.c  Block_GPIO.c  Block_Modbus.c  Block_Network.c  Block_SPI.c  CMakeLists.txt  DB_Main.c  DB_Parameters.c  idf_component.yml  main.c  web_server.c
main/include/: Block_FRAM.h  Block_GPIO.h  Block_Modbus.h  Block_Network.h  Block_SPI.h  DB_Main.h  DB_Parameters.h  web_server.h
